Created text vectorization

--- a/Text-Classifer/prototype/model_prototype.ipynb
+++ b/Text-Classifer/prototype/model_prototype.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "id": "443d96ed",
    "metadata": {},
    "outputs": [
@@ -33,11 +33,15 @@
    ],
    "source": [
     "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import re\n",
     "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "import tensorflow as tf\n",
+    "from tensorflow.keras.layers.experimental.preprocessing import TextVectorization\n",
     "\n",
     "print(\"Version: \", tf.__version__)\n",
     "print(\"GPU is \",\"available\" if tf.config.list_physical_devices(\"GPU\") else \"NOT AVAILABLE\")"
@@ -53,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "id": "d98cf169",
    "metadata": {},
    "outputs": [
@@ -75,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "id": "670d87df",
    "metadata": {},
    "outputs": [
@@ -182,7 +186,7 @@
        "[50000 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "id": "3ac2aa34",
    "metadata": {},
    "outputs": [
@@ -220,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "id": "f2bb2ae3",
    "metadata": {},
    "outputs": [
@@ -254,19 +258,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 75,
    "id": "1c1f8324",
    "metadata": {},
    "outputs": [],
    "source": [
     "def filter_html(row):\n",
     "    f = re.compile(r'<.*?>')\n",
-    "    return f.sub('', row['review'])"
+    "    f = f.sub('', row['review'])\n",
+    "    f = f.replace(\"\\'\", \"\")\n",
+    "    return f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 76,
    "id": "f1f4465a",
    "metadata": {},
    "outputs": [
@@ -313,12 +319,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Basically there's a family where a little boy ...</td>\n",
+       "      <td>Basically theres a family where a little boy (...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Petter Mattei's \"Love in the Time of Money\" is...</td>\n",
+       "      <td>Petter Matteis \"Love in the Time of Money\" is ...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -343,7 +349,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>49998</th>\n",
-       "      <td>I'm going to have to disagree with the previou...</td>\n",
+       "      <td>Im going to have to disagree with the previous...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -361,19 +367,19 @@
        "0      One of the other reviewers has mentioned that ...          1\n",
        "1      A wonderful little production. The filming tec...          1\n",
        "2      I thought this was a wonderful way to spend ti...          1\n",
-       "3      Basically there's a family where a little boy ...          0\n",
-       "4      Petter Mattei's \"Love in the Time of Money\" is...          1\n",
+       "3      Basically theres a family where a little boy (...          0\n",
+       "4      Petter Matteis \"Love in the Time of Money\" is ...          1\n",
        "...                                                  ...        ...\n",
        "49995  I thought this movie did a down right good job...          1\n",
        "49996  Bad plot, bad dialogue, bad acting, idiotic di...          0\n",
        "49997  I am a Catholic taught in parochial elementary...          0\n",
-       "49998  I'm going to have to disagree with the previou...          0\n",
+       "49998  Im going to have to disagree with the previous...          0\n",
        "49999  No one expects the Star Trek movies to be high...          0\n",
        "\n",
        "[50000 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 77,
    "id": "af99cb80",
    "metadata": {},
    "outputs": [
@@ -393,7 +399,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "One of the other reviewers has mentioned that after watching just 1 Oz episode you'll be hooked. They are right, as this is exactly what happened with me.The first thing that struck me about Oz was its brutality and unflinching scenes of violence, which set in right from the word GO. Trust me, this is not a show for the faint hearted or timid. This show pulls no punches with regards to drugs, sex or violence. Its is hardcore, in the classic use of the word.It is called OZ as that is the nickname given to the Oswald Maximum Security State Penitentary. It focuses mainly on Emerald City, an experimental section of the prison where all the cells have glass fronts and face inwards, so privacy is not high on the agenda. Em City is home to many..Aryans, Muslims, gangstas, Latinos, Christians, Italians, Irish and more....so scuffles, death stares, dodgy dealings and shady agreements are never far away.I would say the main appeal of the show is due to the fact that it goes where other shows wouldn't dare. Forget pretty pictures painted for mainstream audiences, forget charm, forget romance...OZ doesn't mess around. The first episode I ever saw struck me as so nasty it was surreal, I couldn't say I was ready for it, but as I watched more, I developed a taste for Oz, and got accustomed to the high levels of graphic violence. Not just violence, but injustice (crooked guards who'll be sold out for a nickel, inmates who'll kill on order and get away with it, well mannered, middle class inmates being turned into prison bitches due to their lack of street skills or prison experience) Watching Oz, you may become comfortable with what is uncomfortable viewing....thats if you can get in touch with your darker side.\n"
+      "One of the other reviewers has mentioned that after watching just 1 Oz episode youll be hooked. They are right, as this is exactly what happened with me.The first thing that struck me about Oz was its brutality and unflinching scenes of violence, which set in right from the word GO. Trust me, this is not a show for the faint hearted or timid. This show pulls no punches with regards to drugs, sex or violence. Its is hardcore, in the classic use of the word.It is called OZ as that is the nickname given to the Oswald Maximum Security State Penitentary. It focuses mainly on Emerald City, an experimental section of the prison where all the cells have glass fronts and face inwards, so privacy is not high on the agenda. Em City is home to many..Aryans, Muslims, gangstas, Latinos, Christians, Italians, Irish and more....so scuffles, death stares, dodgy dealings and shady agreements are never far away.I would say the main appeal of the show is due to the fact that it goes where other shows wouldnt dare. Forget pretty pictures painted for mainstream audiences, forget charm, forget romance...OZ doesnt mess around. The first episode I ever saw struck me as so nasty it was surreal, I couldnt say I was ready for it, but as I watched more, I developed a taste for Oz, and got accustomed to the high levels of graphic violence. Not just violence, but injustice (crooked guards wholl be sold out for a nickel, inmates wholl kill on order and get away with it, well mannered, middle class inmates being turned into prison bitches due to their lack of street skills or prison experience) Watching Oz, you may become comfortable with what is uncomfortable viewing....thats if you can get in touch with your darker side.\n"
      ]
     }
    ],
@@ -402,9 +408,217 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "759e1cee",
+   "metadata": {},
+   "source": [
+    "#### Train Test Split "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "7dc30b6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    df['review'], df['sentiment'], test_size=0.30, random_state=42\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "6525d6a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38094    As much as I love trains, I couldnt stomach th...\n",
+       "40624    This was a very good PPV, but like Wrestlemani...\n",
+       "49425    Not finding the right words is everybodys prob...\n",
+       "35734    Im really suprised this movie didnt get a high...\n",
+       "41708    Ill start by confessing that I tend to really ...\n",
+       "Name: review, dtype: object"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9f64e59",
+   "metadata": {},
+   "source": [
+    "#### Convert to numpy array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "ba09699d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_n = X_train.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "3b16b7a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['As much as I love trains, I couldnt stomach this movie. The premise that one could steal a locomotive and \"drive\" from Arkansas to Chicago without hitting another train along the way has to be right up there on the Impossible Plot lines hit board. Imagine two disgruntled NASA employees stealing the \"crawler\" that totes the shuttles to and fro and driving it to New York and you get the idea.Having said all that, its a nice try. Wilford Brimely is at his Quaker Oats best, and Levon Helm turns a good performance as his dimwitted but well-meaning sidekick. Bob Balaban is suitably wormy as the Corporate Guy, and the \"little guy takes on Goliath\" story gets another airing.',\n",
+       "       'This was a very good PPV, but like Wrestlemania XX some 14 years later, the WWE crammed so many matches on it, some of the matches were useless. Im not going to go through every match on the card because it would take forever to do.However major highlights included the HUGE pop for Demolition winning the tag team belts from Haku and Andre the Giant, The first ever mixed tag match featuring Randy Savage and Sensational Queen Sherri vs Dusty Rhodes and the late Sapphire and the first ever clash between The Ultimate Warrior and Hulk Hogan.Some matches were a complete waste of time. Like The Bolsheviks vs The Hart Foundation was only about 40 seconds long, Koko B Ware vs Rick Martel was short and Big Bossman vs Akeem was too short.Mr Perfect vs Brutus Beefcake and Ted DiBiase vs Jake the snake Roberts were very good indeed.Overall Grade - B',\n",
+       "       'Not finding the right words is everybodys problem in this vaudeville-type urban comedy. They dont know what to say, and they dont know how to say it, which is why they embark on the potentially humiliating enterprise of pre-arranged speed dating. Unfortunately, they all come across as cardboard characters rather than real people. The story follows a conventional three-act structure: getting to know the sizable cast in their sorry single lives, the actual dating circuit, and a final stretch of romantic fallout, showcasing some of the new-found couples follies. Because its all so predictable, Id say that as a narrative, \"Shoppen\" is a failure. As a comedy, most of the time its too goofy to be really funny. Thumbs up to Kathrin von Steinburg. She stands out from the soap opera crowd as the aloof, independently wealthy Miriam. Great makeup on her too (Verena Weißert): Heavy eye shadow meets skin-tone lip gloss, creating a brooding and bohemian, yet girlish effect. Thumbs up also to Stefan Zinner as the Bavarian love machine and Tanja Schleiff as the hot nutritionist. They bypass the communication challenge by way of the timeless body language of copulation.',\n",
+       "       ...,\n",
+       "       'Avoid this one! It is a terrible movie. So what if it is very exciting? All it is is just pointless murders. And the whole thing with Thorn and Michaels curse, that was the absolute worst thing they could possibly do to the series! Why couldnt they leave Michaels story a mystery? Hes supposed to be the Boogeyman, not part of some stupid cult!! Ugh! Thank God for Halloween H20, which wiped out Halloween 3-6! They all sucked! But anyway, if you see this movie, please expect no more than pointless murders and gore.',\n",
+       "       'This production was quite a surprise for me. I absolutely love obscure early 30s movies, but I wasnt prepared for the last 25 minutes of this story. If, by any chance, youre not convinced in the first half, hang in there for the finale. Of course, you must look at the blatant racism as being purely topical. A fascinating viewing experience, but I think THE CATS PAW is not available on video/DVD yet. Watch your PBS listings!',\n",
+       "       'This is a decent movie. Although little bit short in time for me, it packs a lot of action, grit, commonsense and emotions in that time frame. Matt Dillon and the other main character does a great job in this movie. The emotions and intensity were convincing and tense throughout the movie. It is not typical fancy expensive Hollywood CGI action movie, but it was a very satisfying movie indeed for the price. My evening was great because of this movie. This movie is straight traditional action movie with great acting, story and directing. I would recommend this movie. The character development of the characters were good and makes you believe that were are actually seeing a real event taking place. Because this movie I believe was made with cheaper budget, the acting and quality were much higher.'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "579f367b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test_n = X_test.to_numpy()\n",
+    "y_train_n = y_train.to_numpy()\n",
+    "y_test_n = y_test.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f5edce6",
+   "metadata": {},
+   "source": [
+    "#### Text Vectorization "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "5e7b6ff1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_FEATURES = 10000\n",
+    "MAX_LEN = 4\n",
+    "EMBEDDING_DIMS = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "39f08779",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.layers.preprocessing.text_vectorization.TextVectorization at 0x7f2490d074e0>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorize_layer = TextVectorization(\n",
+    "    max_tokens = MAX_FEATURES,\n",
+    "    output_mode = 'int',\n",
+    "    output_sequence_length = MAX_LEN,\n",
+    ")\n",
+    "vectorize_layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "49460494",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorize_layer.adapt(X_train_n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "b306ff9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.Sequential([\n",
+    "    vectorize_layer,\n",
+    "    tf.keras.Input(shape=(1,),dtype=tf.string),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "607f5ac3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  10,   62,  411,   11],\n",
+       "       [  21,  105,  702,  252],\n",
+       "       [   2,   19,  920,  202],\n",
+       "       ...,\n",
+       "       [1273,  984,   43,    2],\n",
+       "       [  28,    5,    2,    1],\n",
+       "       [ 281,   22,   68,   75]])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(X_test_n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b6b802a",
+   "metadata": {},
+   "source": [
+    "## Data Analysis "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2165f147",
+   "id": "0c73796d",
    "metadata": {},
    "outputs": [],
    "source": []
