--- a/Text-Classifer/prototype/model_prototype.ipynb
+++ b/Text-Classifer/prototype/model_prototype.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 47,
    "id": "443d96ed",
    "metadata": {},
    "outputs": [
@@ -42,6 +42,8 @@
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.layers.experimental.preprocessing import TextVectorization\n",
+    "from tensorflow.keras.layers import Embedding\n",
+    "from tensorflow.keras import layers\n",
     "\n",
     "print(\"Version: \", tf.__version__)\n",
     "print(\"GPU is \",\"available\" if tf.config.list_physical_devices(\"GPU\") else \"NOT AVAILABLE\")"
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "d98cf169",
    "metadata": {},
    "outputs": [
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "id": "670d87df",
    "metadata": {},
    "outputs": [
@@ -186,7 +188,7 @@
        "[50000 rows x 2 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "3ac2aa34",
    "metadata": {},
    "outputs": [
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "f2bb2ae3",
    "metadata": {},
    "outputs": [
@@ -258,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "1c1f8324",
    "metadata": {},
    "outputs": [],
@@ -272,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "f1f4465a",
    "metadata": {},
    "outputs": [
@@ -379,7 +381,7 @@
        "[50000 rows x 2 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "id": "af99cb80",
    "metadata": {},
    "outputs": [
@@ -417,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "id": "7dc30b6c",
    "metadata": {},
    "outputs": [],
@@ -429,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "id": "6525d6a0",
    "metadata": {},
    "outputs": [
@@ -444,7 +446,7 @@
        "Name: review, dtype: object"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "id": "ba09699d",
    "metadata": {},
    "outputs": [],
@@ -473,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "id": "3b16b7a5",
    "metadata": {},
    "outputs": [
@@ -490,7 +492,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "id": "579f367b",
    "metadata": {},
    "outputs": [],
@@ -521,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "id": "5e7b6ff1",
    "metadata": {},
    "outputs": [],
@@ -533,17 +535,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "39f08779",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.layers.preprocessing.text_vectorization.TextVectorization at 0x7f2490d074e0>"
+       "<tensorflow.python.keras.layers.preprocessing.text_vectorization.TextVectorization at 0x7f8b0ad1c5f8>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "id": "49460494",
    "metadata": {},
    "outputs": [],
@@ -568,43 +570,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "faf67641",
+   "metadata": {},
+   "source": [
+    "#### Embedding "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
+   "id": "dd78b927",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_layer = Embedding(\n",
+    "    MAX_FEATURES,\n",
+    "    32,\n",
+    "    input_length=MAX_LEN,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "b306ff9e",
    "metadata": {},
    "outputs": [],
    "source": [
     "model = tf.keras.models.Sequential([\n",
-    "    vectorize_layer,\n",
     "    tf.keras.Input(shape=(1,),dtype=tf.string),\n",
+    "    vectorize_layer,\n",
+    "    embedding_layer,\n",
+    "    layers.Flatten(),\n",
+    "    layers.Dense(1, activation='sigmoid')\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 44,
+   "id": "b8ca5d91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = tf.keras.models.Sequential()\n",
+    "# model.add(tf.keras.Input(shape=(1,), dtype=tf.string))\n",
+    "# model.add(vectorize_layer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "08fe844e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_9\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "text_vectorization (TextVect (None, 4)                 0         \n",
+      "_________________________________________________________________\n",
+      "embedding (Embedding)        (None, 4, 32)             320000    \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 1)                 129       \n",
+      "=================================================================\n",
+      "Total params: 320,129\n",
+      "Trainable params: 320,129\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "id": "607f5ac3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  10,   62,  411,   11],\n",
-       "       [  21,  105,  702,  252],\n",
-       "       [   2,   19,  920,  202],\n",
+       "array([[0.50370944],\n",
+       "       [0.49100533],\n",
+       "       [0.51058865],\n",
        "       ...,\n",
-       "       [1273,  984,   43,    2],\n",
-       "       [  28,    5,    2,    1],\n",
-       "       [ 281,   22,   68,   75]])"
+       "       [0.51231796],\n",
+       "       [0.4946246 ],\n",
+       "       [0.4992601 ]], dtype=float32)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model.predict(X_test_n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "166eb559",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15000,)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test_n.shape"
    ]
   },
   {
