Analyzed data and fine tuned preprocessing layers

--- a/Text-Classifer/prototype/model_prototype.ipynb
+++ b/Text-Classifer/prototype/model_prototype.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "443d96ed",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "d98cf169",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "670d87df",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "[50000 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "3ac2aa34",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "f2bb2ae3",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "1c1f8324",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "f1f4465a",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
        "[50000 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "af99cb80",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "7dc30b6c",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "6525d6a0",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
        "Name: review, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "ba09699d",
    "metadata": {},
    "outputs": [],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "3b16b7a5",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "579f367b",
    "metadata": {},
    "outputs": [],
@@ -523,29 +523,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "id": "5e7b6ff1",
    "metadata": {},
    "outputs": [],
    "source": [
     "MAX_FEATURES = 10000\n",
-    "MAX_LEN = 4\n",
+    "MAX_LEN = 200\n",
     "EMBEDDING_DIMS = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "id": "39f08779",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.layers.preprocessing.text_vectorization.TextVectorization at 0x7f8b0ad1c5f8>"
+       "<tensorflow.python.keras.layers.preprocessing.text_vectorization.TextVectorization at 0x7f64002763c8>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
    "id": "49460494",
    "metadata": {},
    "outputs": [],
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "id": "dd78b927",
    "metadata": {},
    "outputs": [],
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 81,
    "id": "b306ff9e",
    "metadata": {},
    "outputs": [],
@@ -603,13 +603,13 @@
     "    vectorize_layer,\n",
     "    embedding_layer,\n",
     "    layers.Flatten(),\n",
-    "    layers.Dense(1, activation='sigmoid')\n",
+    "#     layers.Dense(1, activation='sigmoid')\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "id": "b8ca5d91",
    "metadata": {},
    "outputs": [],
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 83,
    "id": "08fe844e",
    "metadata": {},
    "outputs": [
@@ -629,20 +629,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_9\"\n",
+      "Model: \"sequential_4\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "text_vectorization (TextVect (None, 4)                 0         \n",
+      "text_vectorization_2 (TextVe (None, 200)               0         \n",
       "_________________________________________________________________\n",
-      "embedding (Embedding)        (None, 4, 32)             320000    \n",
+      "embedding_2 (Embedding)      (None, 200, 32)           320000    \n",
       "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 128)               0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 1)                 129       \n",
+      "flatten (Flatten)            (None, 6400)              0         \n",
       "=================================================================\n",
-      "Total params: 320,129\n",
-      "Trainable params: 320,129\n",
+      "Total params: 320,000\n",
+      "Trainable params: 320,000\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -654,50 +652,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 84,
    "id": "607f5ac3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.50370944],\n",
-       "       [0.49100533],\n",
-       "       [0.51058865],\n",
-       "       ...,\n",
-       "       [0.51231796],\n",
-       "       [0.4946246 ],\n",
-       "       [0.4992601 ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.predict(X_test_n)"
+    "processed_X = model.predict(X_test_n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 85,
    "id": "166eb559",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(15000,)"
+       "(15000, 6400)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_test_n.shape"
+    "processed_X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "73264a50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.03715139, -0.03951082,  0.04351897, ..., -0.01247861,\n",
+       "        0.03959943,  0.02102547], dtype=float32)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed_X[0]"
    ]
   },
   {
@@ -710,8 +713,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
+   "id": "628a5f83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>6390</th>\n",
+       "      <th>6391</th>\n",
+       "      <th>6392</th>\n",
+       "      <th>6393</th>\n",
+       "      <th>6394</th>\n",
+       "      <th>6395</th>\n",
+       "      <th>6396</th>\n",
+       "      <th>6397</th>\n",
+       "      <th>6398</th>\n",
+       "      <th>6399</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.037151</td>\n",
+       "      <td>-0.039511</td>\n",
+       "      <td>0.043519</td>\n",
+       "      <td>-0.012676</td>\n",
+       "      <td>-0.049001</td>\n",
+       "      <td>0.048414</td>\n",
+       "      <td>-0.027672</td>\n",
+       "      <td>-0.023931</td>\n",
+       "      <td>0.027512</td>\n",
+       "      <td>-0.047284</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.020752</td>\n",
+       "      <td>0.011692</td>\n",
+       "      <td>0.042319</td>\n",
+       "      <td>-0.013472</td>\n",
+       "      <td>0.011908</td>\n",
+       "      <td>-0.004481</td>\n",
+       "      <td>0.029991</td>\n",
+       "      <td>-0.012479</td>\n",
+       "      <td>0.039599</td>\n",
+       "      <td>0.021025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.042028</td>\n",
+       "      <td>-0.020603</td>\n",
+       "      <td>-0.014280</td>\n",
+       "      <td>-0.004191</td>\n",
+       "      <td>-0.001042</td>\n",
+       "      <td>0.017406</td>\n",
+       "      <td>-0.045665</td>\n",
+       "      <td>0.016261</td>\n",
+       "      <td>-0.027302</td>\n",
+       "      <td>0.041986</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.031065</td>\n",
+       "      <td>0.032290</td>\n",
+       "      <td>0.028777</td>\n",
+       "      <td>0.037715</td>\n",
+       "      <td>0.030861</td>\n",
+       "      <td>0.022790</td>\n",
+       "      <td>0.011520</td>\n",
+       "      <td>-0.003613</td>\n",
+       "      <td>0.035320</td>\n",
+       "      <td>-0.001542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.044107</td>\n",
+       "      <td>0.032542</td>\n",
+       "      <td>0.042482</td>\n",
+       "      <td>-0.028165</td>\n",
+       "      <td>0.032288</td>\n",
+       "      <td>0.027521</td>\n",
+       "      <td>0.049152</td>\n",
+       "      <td>0.039995</td>\n",
+       "      <td>0.048789</td>\n",
+       "      <td>-0.011609</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000816</td>\n",
+       "      <td>-0.036514</td>\n",
+       "      <td>0.001668</td>\n",
+       "      <td>0.022847</td>\n",
+       "      <td>0.022369</td>\n",
+       "      <td>0.015303</td>\n",
+       "      <td>-0.040903</td>\n",
+       "      <td>0.023043</td>\n",
+       "      <td>-0.034420</td>\n",
+       "      <td>-0.029275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.004317</td>\n",
+       "      <td>-0.022330</td>\n",
+       "      <td>0.003580</td>\n",
+       "      <td>0.025369</td>\n",
+       "      <td>-0.023975</td>\n",
+       "      <td>-0.001051</td>\n",
+       "      <td>0.025758</td>\n",
+       "      <td>0.016449</td>\n",
+       "      <td>-0.022952</td>\n",
+       "      <td>-0.042192</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000816</td>\n",
+       "      <td>-0.036514</td>\n",
+       "      <td>0.001668</td>\n",
+       "      <td>0.022847</td>\n",
+       "      <td>0.022369</td>\n",
+       "      <td>0.015303</td>\n",
+       "      <td>-0.040903</td>\n",
+       "      <td>0.023043</td>\n",
+       "      <td>-0.034420</td>\n",
+       "      <td>-0.029275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.002559</td>\n",
+       "      <td>0.019066</td>\n",
+       "      <td>0.038694</td>\n",
+       "      <td>0.007921</td>\n",
+       "      <td>-0.025409</td>\n",
+       "      <td>-0.022586</td>\n",
+       "      <td>-0.043493</td>\n",
+       "      <td>-0.037645</td>\n",
+       "      <td>0.045353</td>\n",
+       "      <td>0.017482</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.040848</td>\n",
+       "      <td>0.036653</td>\n",
+       "      <td>-0.031116</td>\n",
+       "      <td>0.002187</td>\n",
+       "      <td>-0.049533</td>\n",
+       "      <td>0.015519</td>\n",
+       "      <td>-0.038246</td>\n",
+       "      <td>-0.040085</td>\n",
+       "      <td>0.031107</td>\n",
+       "      <td>0.041450</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 6400 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0         1         2         3         4         5         6     \\\n",
+       "0  0.037151 -0.039511  0.043519 -0.012676 -0.049001  0.048414 -0.027672   \n",
+       "1 -0.042028 -0.020603 -0.014280 -0.004191 -0.001042  0.017406 -0.045665   \n",
+       "2 -0.044107  0.032542  0.042482 -0.028165  0.032288  0.027521  0.049152   \n",
+       "3  0.004317 -0.022330  0.003580  0.025369 -0.023975 -0.001051  0.025758   \n",
+       "4 -0.002559  0.019066  0.038694  0.007921 -0.025409 -0.022586 -0.043493   \n",
+       "\n",
+       "       7         8         9     ...      6390      6391      6392      6393  \\\n",
+       "0 -0.023931  0.027512 -0.047284  ...  0.020752  0.011692  0.042319 -0.013472   \n",
+       "1  0.016261 -0.027302  0.041986  ...  0.031065  0.032290  0.028777  0.037715   \n",
+       "2  0.039995  0.048789 -0.011609  ...  0.000816 -0.036514  0.001668  0.022847   \n",
+       "3  0.016449 -0.022952 -0.042192  ...  0.000816 -0.036514  0.001668  0.022847   \n",
+       "4 -0.037645  0.045353  0.017482  ... -0.040848  0.036653 -0.031116  0.002187   \n",
+       "\n",
+       "       6394      6395      6396      6397      6398      6399  \n",
+       "0  0.011908 -0.004481  0.029991 -0.012479  0.039599  0.021025  \n",
+       "1  0.030861  0.022790  0.011520 -0.003613  0.035320 -0.001542  \n",
+       "2  0.022369  0.015303 -0.040903  0.023043 -0.034420 -0.029275  \n",
+       "3  0.022369  0.015303 -0.040903  0.023043 -0.034420 -0.029275  \n",
+       "4 -0.049533  0.015519 -0.038246 -0.040085  0.031107  0.041450  \n",
+       "\n",
+       "[5 rows x 6400 columns]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed_X_df = pd.DataFrame(processed_X)\n",
+    "processed_X_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "id": "0c73796d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nonzeros = processed_X_df.astype(bool).sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "0265938a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6400.0"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nonzeros.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55f10cfc",
    "metadata": {},
    "outputs": [],
    "source": []
